--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "recharts": "^2.15.1",
     "shadcn-ui": "^0.9.5",
     "sonner": "^2.0.2",
+    "swiper": "^11.2.9",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
